--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,17 @@
 	<groupId>com.prabh</groupId>
 	<artifactId>SpringBootBasic</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>SpringBootBasic</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<spring.boot.version>2.2.6.RELEASE</spring.boot.version> <!-- DO NOT UPDATE w/o MANUAL TESTING -->
 		<java.version>1.8</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -74,7 +80,7 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>2.1.0</version>
+				<version>2.2.0</version>
 				<configuration>
 					<projectId>prime-phalanx-277508</projectId>
 					<version>1</version>
